@@ -1,4 +1,5 @@
 Release ...
+* file: UTF-8 characters in troff input files are now recognized.
 * cp: The "-s" option now displays correct sizes and related statistics
   for special files with st_size == 0.
 * su: Works with PAM on Mac OS X now (Stefan Tramm).
